[package]
name = "oports"
version = "0.2.1"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
description = "Async library to retrieve open ports for a given IP address"
license = "MIT"
edition = "2018"

[dependencies]
async-std = "1.4.0"
futures = "0.3.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
  "run-for-all",
  "prepush-hook",
  "precommit-hook",
  "run-cargo-check",
  "run-cargo-clippy",
  "run-cargo-fmt",
  "run-cargo-test",
]
