[package]
name = "oports"
version = "1.0.0"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
description = "Async library to retrieve open ports for a given IP address"
license = "MIT"
edition = "2018"

[dependencies]
async-std = "1.6.3"
futures = "0.3.5"

[dev-dependencies]
async-std = { version = "1.6.3", features = ["attributes"] }
pretty_assertions = "0.6.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
  "run-for-all",
  "prepush-hook",
  "precommit-hook",
  "run-cargo-check",
  "run-cargo-clippy",
  "run-cargo-fmt",
  "run-cargo-test",
]
